--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
     "react-player": "^2.16.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
+    "rss-parser": "^3.13.0",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
