--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
