--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
     "react-leaflet": "^4.2.1",
+    "react-paystack": "^5.0.0",
     "react-player": "^2.16.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.23.0",
