--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "dotenv": "^16.4.5",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.0",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "react-paystack": "^5.0.0",
     "react-player": "^2.16.0",
     "react-responsive-carousel": "^3.2.23",
@@ -32,6 +35,7 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-to-print": "^2.15.1",
     "rss-parser": "^3.13.0",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1",
