--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@paystack/inline-js": "^2.19.1",
     "@react-google-maps/api": "^2.19.3",
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -30,6 +31,7 @@
     "react-modal": "^3.16.1",
     "react-paystack": "^5.0.0",
     "react-player": "^2.16.0",
+    "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
