--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "11.7.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.0.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -75,8 +75,7 @@
     "@babel/core": "^7.26.0",
     "@babel/eslint-parser": "^7.25.9",
     "@babel/plugin-syntax-jsx": "^7.25.9",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.26.3",
+    "browserslist": "> 0.25%, not dead",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.31.0",
@@ -84,7 +83,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "https-browserify": "^1.0.0",
-    "parcel-bundler": "^1.12.5",
+    "parcel": "^2.0.0",
     "react-app-rewired": "^2.2.1",
     "stream-http": "^3.2.0",
     "stylelint": "^13.13.1",
